@@ -21,6 +21,7 @@
 	<url>https://metron.incubator.apache.org/</url>
 	<properties>
 		<twitter>@ApacheMetron</twitter>
+		<global_opencsv_version>3.7</global_opencsv_version>
 		<global_storm_version>0.10.0</global_storm_version>
 		<global_flux_version>0.10.0</global_flux_version>
 		<global_pcap_version>1.7.1</global_pcap_version>
@@ -33,8 +34,10 @@
 		<global_metrics_version>3.0.2</global_metrics_version>
 		<global_junit_version>4.4</global_junit_version>
 		<global_guava_version>17.0</global_guava_version>
+		<global_hbase_guava_version>12.0</global_hbase_guava_version>
 		<global_json_schema_validator_version>2.2.5</global_json_schema_validator_version>
 		<global_slf4j_version>1.7.7</global_slf4j_version>
+		<global_opencsv_version>3.7</global_opencsv_version>
 	</properties>
 	<licenses>
 		<license>
@@ -76,6 +79,17 @@
 	</dependencies>
 
 	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.5.1</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 
 	<reporting>
@@ -84,7 +98,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.18</version>
-				<configuration>
+        <configuration>
+          <argLine>-Xmx2048m -XX:MaxPermSize=256m</argLine>
 					<systemProperties>
 						<property>
 							<name>mode</name>
